20-final-devops-project/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: yatri
  labels:
    app.kubernetes.io/part-of: yatri
    pod-security.kubernetes.io/enforce: restricted   # block privileged Pods in this namespace
